# KairoAI_Assistant

./: README.md
backend/: main.py  pyproject.toml
backend/tools/: media_control.py  wake_word.py
